--- a/delightful-thyme/style.css
+++ b/delightful-thyme/style.css
@@ -96,8 +96,9 @@ body.dim {
 }
 #bottom-text {
     font-family: 'PC Senior', monospace;
-    font-size: 1vh;
+    font-size: 10px;
     bottom: 0;
+    line-height: 1;
 }
 .hidden {
     visibility: hidden;
@@ -115,7 +116,7 @@ body.dim {
 }
 .type-animation {
     width: 30ch;
-    animation: typing 1.5s steps(30);
+    animation: typing 1.1s steps(30);
     white-space: nowrap;
     overflow: hidden;
 }
