feat: basic mobile ui support

--- a/delightful-thyme/style.css
+++ b/delightful-thyme/style.css
@@ -1,34 +1,35 @@
 :root {
-    --color-dark: #181818;
+    --color-dark: #041725;
     --current-level: 1;
+    --background-level-scale: 100vw
 }
 html {
     background-color: var(--color-dark);
 }
 body {
-    background-color: var(--color-dark);
-    background-image: url('img/bg.avif');
-    background-size: 110vw;
-    background-position: center;
     margin: 0;
     overflow: hidden;
-    transition: all 3s ease-in-out;
+}
+@font-face {
+    font-family: 'PC Senior';
+    src: url('pcsenior.ttf');
 }
 
-body {
-    background-size: calc(110vw + var(--current-level) * 10);
-}
-#game-window {
+#game-layout {
+    transition: all 3s ease-in-out;
     backdrop-filter: brightness(calc(1 - var(--current-level) * 0.1));
+    background-color: var(--color-dark);
+    background-image: url('img/bg.avif');
+    max-width: 1800px;
+    margin: auto;
+    width: 100vw;
+    height: 100vh;
+    display: grid;
 }
+
 #input-window {
     filter: opacity(1);
     z-index: 10;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 20px;
-    width: 65vw;
     font-family: "PC Senior", monospace;
     background-image: url('img/redwood.avif');
     background-size: 10000px 10000px;
@@ -40,6 +41,7 @@ body {
 #input-window.out {
     filter: opacity(0);
 }
+
 #wild-name {
     color: #fff;
     padding: 8px;
@@ -58,19 +60,12 @@ body {
 #wild-name:invalid {
     border: 8px solid #8a0010;
 }
+
 #game-window {
-    display: flex;
-    justify-content: left;
-    align-items: center;
-    height: 100vh;
     transition: filter 0.8s ease-in;
     filter: hue-rotate(0deg) blur(0px) opacity(1);
     transform: translate(0px, 0px);
-}
-#canvas {
-    box-shadow: 0px 10px 40px #000;
-    filter: url(#treeportal);
-    width: 65vw;
+    margin-bottom: 50px;
 }
 #game-window.portal {
     filter: hue-rotate(180deg) blur(12px) opacity(1);
@@ -78,13 +73,16 @@ body {
 #game-window.warpoffset {
     transform: translate(12px, 15px);
 }
+
+#canvas {
+    width: 90%;
+    box-shadow: 0px 10px 40px #000;
+    filter: url(#treeportal);
+}
 #warp-effect {
     position: absolute;
 }
-@font-face {
-  font-family: 'PC Senior';
-  src: url('pcsenior.ttf');
-}
+
 .nudge {
     animation: shaking 0.2s 1.5;
 }
@@ -95,13 +93,9 @@ body {
     65% { transform: translate(-2px, 1px) rotate(-0.2deg); }
     100% { transform: translate(0, 0) rotate(0deg); }
 }
+
 #top-text {
     font-family: 'PC Senior', monospace;
-    top: 24px;
-    right: 20px;
-    min-width: 29ch;
-    max-width: 400px;
-    font-size: 1.1vw;
     --text-bubble-bg: rgba(0, 40, 70, 0.8);
     background: var(--text-bubble-bg);
     padding-left: 10px;
@@ -121,31 +115,28 @@ body {
     text-align: right;
     color: var(--text-bubble-bg);
 }
-
+    
 #bottom-text {
     font-family: 'PC Senior', monospace;
-    font-size: 10px;
-    bottom: 24px;
-    line-height: 1;
-    min-width: 32vw;
+    font-size: 1rem;
+    text-align: left;
+    line-height: 1.2;
+    margin-bottom: 4rem;
+    padding-left: 6rem;
+    text-indent: -6rem;
 }
 .hidden {
     visibility: hidden;
 }
 .text-box {
-    position: absolute;
-    right: 0;
     font-size: 18px;
     color: #aaa;
-    width: calc(100% - 1330px);
     line-height: 32px;
 }
 .intro-text {
     line-height: 1;
 }
 .type-animation {
-    width: 30ch;
-    animation: typing 1.1s steps(30);
     white-space: nowrap;
     overflow: hidden;
 }
@@ -154,17 +145,136 @@ body {
     width: 0
   }
 }
-#fullscreen-controls {
-    display: block;
-    position: absolute;
-    bottom: 0;
-    right: 10px;
-    color: #aaa;
-    font-size: 32px;
-    transform: scale(1.0);
-    transition: transform 0.2s ease-out;
+
+/* desktop-only layout */
+@media (min-width: 601px) {
+    html {
+        font-size: 12px;
+    }
+    .type-animation {
+        width: 30ch;
+        animation: typing 1.1s steps(30);
+    }
+    #top-text {
+        position: relative;
+        font-size: 1rem;
+    }
+    #game-layout {
+        display: grid;
+        grid-template-columns: 1fr 36rem;
+        grid-template-rows: repeat(3, 1fr);
+        grid-column-gap: 20px;
+        grid-row-gap: 0px;
+        background-position: center;
+        background-size: var(--background-level-scale-vw);
+    }
+    #input-window {
+        grid-area: 1 / 1 / 4 / 2;
+    }
+    #game-window {
+        grid-area: 1 / 1 / 4 / 2;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    #top-text {
+        margin: 2rem;
+        grid-area: 1 / 2 / 2 / 3;
+    }
+    #bottom-text {
+        padding: 1rem;
+        grid-area: 3 / 2 / 4 / 3;
+    }
+    #game-controls { display: none; }
+    #fullscreen-controls {
+        display: block;
+        position: absolute;
+        bottom: 0;
+        right: 10px;
+        color: #aaa;
+        font-size: 32px;
+        transform: scale(1.0);
+        transition: transform 0.2s ease-out;
+    }
+    #fullscreen-controls:hover {
+        transform: scale(1.1);
+        cursor: pointer;
+    }
 }
-#fullscreen-controls:hover {
-    transform: scale(1.1);
-    cursor: pointer;
+
+/* mobile-only layout */
+@media (max-width: 600px) {
+    html {
+        font-size: calc(5px + 1.3vh);
+    }
+    .type-animation {
+        width: 60ch;
+        animation: typing 2.2s steps(60);
+    }
+    #top-text {
+        font-size: 0.37rem;
+    }
+    #game-layout {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        grid-column-gap: 0px;
+        grid-row-gap: 20px;
+        background-position: bottom;
+        background-size: var(--background-level-scale-vh);
+    }
+    #input-window,
+    #game-window {
+        grid-area: 1 / 1 / 2 / 3;
+    }
+    #top-text {
+        grid-area: 2 / 1 / 3 / 3;
+    }
+    #bottom-text {
+        display: none;
+    }
+    #fullscreen-controls {
+        display: none;
+    }
+    #game-controls {
+        grid-area: 3 / 1 / 4 / 3;
+        padding: 12px;
+    }
+
+    #gc-button-pad {
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        grid-template-rows: repeat(5, 1fr);
+        grid-column-gap: 0px;
+        grid-row-gap: 0px;
+    }
+    #gc-interact { grid-area: 1 / 1 / 2 / 3; }
+    #gc-back { grid-area: 1 / 4 / 2 / 6; }
+    #gc-up { grid-area: 2 / 3 / 3 / 4; }
+    #gc-left { grid-area: 3 / 2 / 4 / 3; }
+    #gc-right { grid-area: 3 / 4 / 4 / 5; }
+    #gc-down { grid-area: 4 / 3 / 5 / 4; }
+    #gc-inventory { grid-area: 5 / 1 / 6 / 2; }
+    #gc-equipment { grid-area: 5 / 2 / 6 / 3; }
+    #gc-drop { grid-area: 5 / 4 / 6 / 5; }
+    #gc-scan { grid-area: 5 / 5 / 6 / 6; }
+
+    .gc-button {
+        background: transparent;
+        border: 1px dashed #aaa;
+        border-radius: 5px;
+        color: #aaa;
+        height: 60px;
+        margin: 6px;
+        font-family: "PC Senior", monospace;
+        box-shadow: 5px 5px #aaa;
+    }
+    .gc-button:hover {
+        box-shadow: 2px 2px #aaa;
+        margin-top: 9px;
+        left: 9px;
+    }
+    .gc-arrow {
+        font-size: 35px;
+    }
 }
+
